<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.perfilMain"
    android:background="#1A1A1A">

    <View
        android:id="@+id/view2"
        android:layout_width="599dp"
        android:layout_height="1548dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/perfilbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/imagenProfile" />
    <TextView
        android:id="@+id/viewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/profileUsernameView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/profileEmailView"
        android:textColor="#97FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewUsername" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title_activity_perfil"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/terminosProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/terminosProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEmail"
        android:background="@drawable/custom_buttom"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/politicaProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/politicaProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terminosProfile"
        android:background="@drawable/custom_buttom"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/closeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/closeProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/politicaProfile"
        android:background="@drawable/custom_buttom"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/deleteProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeProfile"
        android:background="@drawable/custom_buttom"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"/>



</androidx.constraintlayout.widget.ConstraintLayout>