<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imagenProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nombreProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/nombre_producto"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/precioProducto"
        app:layout_constraintStart_toEndOf="@+id/imagenProducto"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/precioProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/precio_producto"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/cosecharButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/pesoProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesototal_producto"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/precioProducto"
        tools:layout_editor_absoluteX="270dp"
        tools:ignore="MissingConstraints,SmallSp" />

    <Button
        android:id="@+id/cosecharButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/button_producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>