<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgroundlogin"
    tools:context=".data.RegisterActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="5dp"
        android:background="#00FFFFFF"
        android:text="@string/buttonlogin"
        android:textSize="12sp"
        android:enabled="true"
        android:onClick="loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/titleRegister"
        android:textColor="#003C02"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreRegister"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/prompt_nameRegister"
        android:background="@color/black"
        android:backgroundTint="#90000000"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/apellidosRegister"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        android:autofillHints="Nombre"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/apellidosRegister"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/prompt_apellidosRegister"
        android:background="@color/black"
        android:backgroundTint="#90000000"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/nombreRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        android:autofillHints="Apellidos"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/prompt_usernameRegister"
        android:background="@color/black"
        android:backgroundTint="#90000000"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        android:autofillHints="Username"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_emailRegister"
        android:background="@color/black"
        android:backgroundTint="#90000000"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        android:autofillHints="Email"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:background="@color/black"
        android:backgroundTint="#90000000"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        android:autofillHints="Password"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/passwordRepeatRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_passwordRepeatRegister"
        android:background="@color/black"
        android:backgroundTint="#90000000"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        android:autofillHints="passwordRepeat"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/telefonoRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="300dp"
        android:autofillHints="Edad"
        android:background="@color/black"
        android:backgroundTint="#90000000"
        android:ems="10"
        android:hint="@string/prompt_telefonoRegister"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="400dp"
        android:autofillHints="Register"
        android:background="#06880C"
        android:enabled="true"
        android:text="@string/prompt_buttonRegister"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegister"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>